# SE2JUCE_Projects

./: CMakeLists.txt  readme.md  readme.txt
.github/workflows/: cmake-multi-platform.yml
PD303/: CMakeLists.txt  PD303.jucer
PD303/Installer_Win/: Installer.wixproj  Product.wxs
PD303/Resources/: CMakeLists.txt  PD303____fontMetrics.txt  PD303__button_sm.txt  PD303__global.txt  database.se.xml  default2__global.txt  default__button_sm.txt  default__knob_sm.txt  default__led.txt  dsp.se.xml  factory.se.xml  gui.se.json  module_static_link.cpp  parameters.h  parameters.se.xml
PD303/SE_Project/: PD303.se1
PD303/SE_Project/Skin/PD303/: Knob_med.txt
PD303/Source/: ExtraModules.cpp  ProcessorFactory.cpp
modules_3rdparty/ADSR4/: Adsr4.cpp  Adsr4.h
